# Vasek_Edit

./: Cargo.toml  Plan.md
crates/editor-core/: Cargo.toml
crates/editor-core/src/: buffer.rs  cursor.rs  document.rs  error.rs  history.rs  lib.rs  piece_table.rs
crates/editor-gui/: Cargo.toml
crates/editor-gui/src/: app.rs  main.rs
crates/editor-tui/: Cargo.toml
crates/editor-tui/src/: app.rs  logging.rs  main.rs  ui.rs
