[package]
name = "editor-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "vasek-edit"
path = "src/main.rs"

[dependencies]
editor-core = { path = "../editor-core" }
ratatui     = "0.29"
crossterm   = "0.28"
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs        = "5"
